syntax = "proto3";

import "seller.proto";
import "ordered-item.proto";

option java_multiple_files = true;
option java_package = "com.sb.pb.proto";


message SalesOrder{
  int32 numOrder = 1;
  Seller seller = 2;
  repeated OrderedItem orderedItem = 3;
}
